--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-ts": "latest",
+    "grunt-typescript": "",
     "grunt-contrib-uglify": "",
     "grunt-contrib-clean": "",
     "grunt-contrib-watch": "",
     "grunt-contrib-sass": "",
     "grunt-contrib-compass": "",
     "grunt-contrib-concat": "",
-    "grunt-contrib-connect": "",
     "grunt-contrib-copy": ""
   }
 }
